test/negative/102_unclosed_paren.fx
// expect: paren
val a = (1 + 2
println(a)
