test/negative/102_unclosed_paren.err
102_unclosed_paren.fx:4:1: error: some braces (around 102_unclosed_paren.fx:2:9) are not closed
